--- a/BouncyCastle.AesGcm.csproj
+++ b/BouncyCastle.AesGcm.csproj
@@ -48,6 +48,7 @@
     <Compile Include="IAesGcm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
